<resources>
    <string name="bd_wallet_get_pwd_info_error">获取支付密码相关信息失败</string>
    <string name="bd_wallet_load_fail">加载失败，请退出百度钱包重试</string>
    <string name="bd_wallet_enabled">已启用</string>
    <string name="bd_wallet_disabled">未启用</string>
    <string name="bd_wallet_phone_pwd">手机支付密码</string>
    <string name="bd_wallet_modify_phone_pwd">修改手机支付密码</string>
    <string name="bd_wallet_forget_phone_pwd">忘记手机支付密码</string>
    <string name="bd_wallet_pay_security">支付安全</string>
    <string name="bd_wallet_pay_security_title">百度钱包 安全支付</string>
    <string name="bd_wallet_pay_security_desp_1">为您提供完善的支付安全技术保障</string>
    <string name="bd_wallet_pay_security_desp_2">手机支付密码，加强您的资金账户安全</string>
    <string name="bd_wallet_pay_security_pp">隐私安全保护</string>
    <string name="bd_wallet_pay_security_protection">支付安全防护</string>
    <string name="bd_wallet_pay_security_protection_message_install">百度手机卫士将为您提供24小时支付安全防护，保障手机支付无忧</string>
    <string name="bd_wallet_pay_security_protection_message_update">为了全面保护手机安全，请马上升级百度手机卫士</string>
    <string name="bd_wallet_pay_security_protection_install">立即下载安装</string>
    <string name="bd_wallet_pay_security_protection_update">立即下载升级</string>
    <string name="bd_wallet_pay_security_tip">安全提示</string>
    <string name="bd_wallet_pay_securtiy_faq">常见问题</string>
    <string name="bd_wallet_pay_security_services_tip">百度钱包客服竭诚为您服务：</string>
    <string name="bd_wallet_pay_security_pp_tip">开启后/已开启，查看账户余额，我的交易时须先验证手机支付密码，首页资产数目将隐藏。</string>
    <string name="bd_wallet_pay_security_pp_tip1">开启后/已开启，查看账户余额，我的交易时须先验证手机支付密码。</string>
    <string name="bd_wallet_pay_security_set_success">设置成功</string>
    <string name="bd_wallet_pay_security_set_fail">设置失败</string>
    <string name="bd_wallet_pay_security_set_pay_pwd_tip">您尚未设置手机支付密码，请设置后开启隐私安全保护</string>
    <string name="bd_wallet_pay_security_prompt_set">立即设置</string>
    <string name="bd_wallet_modify_card_no">修改卡号</string>
    <string name="bd_wallet_pay_by_order_price">原价支付</string>
    <string name="bd_wallet_set_phone_pwd">设置手机支付密码</string>
    <string name="bd_wallet_credit">信用卡</string>
    <string name="bd_wallet_debit">储蓄卡</string>
    <string name="bd_wallet_own_parent_banks">所属银行</string>
    <string name="ebpay_use_new_bankcard">使用新银行卡</string>
    <string name="ebpay_paying">百度钱包安全支付中…</string>
    <string name="ebpay_last_nums">尾号</string>
    <string name="ebpay_send_fail">验证码发送失败</string>
    <string name="ebpay_error_date">卡有效期不能为空</string>
    <string name="ebpay_format_date">卡有效期错误，请重新输入</string>
    <string name="ebpay_error_cvv">卡背末三位数错误，请重新输入</string>
    <string name="ebpay_error_name">持卡人姓名错误，请重新输入</string>
    <string name="ebpay_error_id">身份证错误，请重新输入</string>
    <string name="ebpay_error_phone">手机号错误，请重新输入</string>
    <string name="ebpay_error_cer">验证码错误，请重新输入</string>
    <string name="ebpay_payresult_huifei">预计3分钟到账，</string>
    <string name="ebpay_payresult_transfer">预计2小时内到账，</string>
    <string name="ebpay_payresult_jiaoyi">详情请查看我的交易</string>
    <string name="ebpay_choose_credit_type">信用卡信息</string>
    <string name="ebpay_choose_debit_type">储蓄卡信息</string>
    <string name="ebpay_choose_credit_tip">查看支持的银行卡</string>
    <string name="ebpay_choose_credit_tip2">支持的银行</string>
    <string name="ebpay_account_safe">请绑定本人银行卡，百度钱包确保您的用卡安全，请放心填写</string>
    <string name="ebpay_tip_compl">为了您的账户安全，请完善银行卡信息</string>
    <string name="ebpay_tip_find_pwd">请重新绑定本人银行卡以找回密码</string>
    <string name="ebpay_bank_belong">所属银行</string>
    <string name="ebpay_card_tip">银行卡号</string>
    <string name="ebpay_card_tip_for_nfc">银行卡号（本业务不支持信用卡）</string>
    <string name="ebpay_valid_date">有效期</string>
    <string name="ebpay_year_month">月/年（如08/16输入0816）</string>
    <string name="ebpay_card_end_dim">卡背面末三位数</string>
    <string name="ebpay_true_name">持卡人姓名</string>
    <string name="ebpay_name">姓名</string>
    <string name="ebpay_id_card">身份证号</string>
    <string name="ebpay_id_cardholder_id_cardnum">持卡人身份证</string>
    <string name="ebpay_bank_bind_phone">手机号</string>
    <string name="ebpay_bank_cvv2">安全码</string>
    <string name="ebpay_select_other">选择其他银行卡支付</string>
    <string name="ebpay_safe_encrypt">所有信息均经过高强度加密处理，仅用于银行验证</string>
    <string name="ebpay_check_phone">验证手机号</string>
    <string name="ebpay_use_new_card">使用新银行卡</string>
    <string name="ebpay_choose_modify_card">修改卡号</string>
    <string name="ebpay_choose_confirm">确认无误</string>
    <string name="ebpay_bank_count_beyond">银行卡数量已达上限，请先去我的银行卡解绑</string>
    <string name="ebpay_card_no">卡号</string>
    <string name="ebpay_title_find_pwd">找回手机支付密码</string>
    <string name="ebpay_title_complete_info">完善信息</string>
    <string name="ebpay_sub_title_find_pwd">为了您的账户安全，请重新填写银行卡以找回手机支付密码</string>
    <string name="ebpay_hint_last4num">请输入尾号是%1$s的银行卡号</string>
    <string name="ebpay_pwd_set_tip">仅用于手机支付的数字密码，以后凭该密码安全支付，请勿与登录密码设置一致</string>
    <string name="ebpay_pwd_check_tip">请输入手机支付密码以验证身份</string>
    <string name="ebpay_pwd_check_tip2">请输入旧手机支付密码以验证身份</string>
    <string name="ebpay_pwd_confim_tip">请确认手机支付密码</string>
    <string name="ebpay_pwd_changed">密码不一致请重新输入</string>
    <string name="ebpay_pwd_forget_success">密码找回成功</string>
    <string name="ebpay_valid_code_sent">为了保障您的用卡安全，百度钱包需要验证您的手机号，验证码已发送至手机 %1$s</string>
    <string name="ebpay_pay_by_sms_code_tip">密码输入错误，您可以通过发送到%1$s的短信验证码进行支付</string>
    <string name="ebpay_only_complete_top_left_tip">请绑定本人银行卡，百度钱包保障您的用卡安全，请放心填写</string>
    <string name="ebpay_cvv2_tip_title">安全码说明</string>
    <string name="ebpay_date_tip_title">有效期说明</string>
    <string name="ebpay_cvv2_tip">卡背面数字的后三位</string>
    <string name="ebpay_date_tip">卡正面有效期，如08/16输入0816</string>
    <string name="ebpay_tip_complete">你选择的银行卡信息不全，为了你的支付安全，请完善卡信息并完成本次支付</string>
    <string name="ebpay_complete_tip">为了您的账户安全，请完善您的银行卡信息</string>
    <string name="ebpay_complete_tip2">您的银行卡暂不可用，可尝试解绑后重新绑定其他银行卡进行支付</string>
    <string name="ebpay_complete_tip3">您的银行卡暂不可用，请添加新的银行卡进行支付</string>
    <string name="ebpay_complete_tip4">您尚未设置手机支付密码，为了您的账户安全，请重新填写银行卡信息</string>
    <string name="ebpay_complete_tip5">您尚未设置手机支付密码，为了您的账户安全，请解绑任意银行卡后再进行操作</string>
    <string name="ebpay_complete_tip6">您尚未设置手机支付密码，为了您的账户安全，请添加新卡并设置支付密码</string>
    <string name="ebpay_no_pwd_complete_tip">您尚未设置手机支付密码，为了您的账户安全，请重新填写银行卡信息</string>
    <string name="ebpay_fill_info">完善信息并支付</string>
    <string name="ebpay_cancel_fill_info">暂不完善，返回</string>
    <string name="ebpay_modify_success">修改成功</string>
    <string name="ebpay_payresult_order_amount">订单金额</string>
    <string name="ebpay_payresult_order_coupon">优惠金额</string>
    <string name="ebpay_pay_wallet_copyright">百度钱包版权所有@2015</string>
    <string name="ebpay_pay_success">付款成功！</string>
    <string name="ebpay_pay_fail">付款失败！</string>
    <string name="ebpay_pay_error_huafei">充值失败！</string>
    <string name="ebpay_pay_error_zhuanzhuang">转账失败！</string>
    <string name="ebpay_set_phone_paycode">设置手机支付密码</string>
    <string name="ebpay_sms_verify">短信验证码</string>
    <string name="ebpay_input_sms_vcode">输入验证码</string>
    <string name="ebpay_call_kefu">拨打客服</string>
    <string name="ebpay_abandon_pay">放弃付款</string>
    <string name="ebpay_zhuanzhuang">确认转账</string>
    <string name="ebpay_add_debit_tip">请添加储蓄卡以完成付款（信用卡不支持此业务）</string>
    <string name="ebpay_add_debit">添加储蓄卡</string>
    <string name="ebpay_check_pwd">验证手机支付密码</string>
    <string name="ebpay_modified_pwd">修改手机支付密码</string>
    <string name="ebpay_supported_cards">可支持银行卡</string>
    <string name="ebpay_cancel_pay">取消付款</string>
    <string name="ebpay_wallet_continue_pay">继续支付</string>
    <string name="ebpay_pay_with_another_card">使用其他卡</string>
    <string name="ebpay_update_credit_tip">请更新该信用卡变更信息，百度钱包保障您的信用卡安全，请放心填写</string>
    <string name="ebpay_update_card">更新卡信息</string>
    <string name="ebpay_use_balance_pay">将使用您的余额支付%1$s元，剩余%2$s元将使用银行卡继续支付</string>
    <string name="ebpay_use_balance_pay_debits_only_ext">（该交易只支持储蓄卡）</string>
    <string name="ebpay_confirm_abandon_balance_charge">确定放弃充值？</string>
    <string name="ebpay_abandon_balance_charge">放弃充值</string>
    <string name="ebpay_tip_balance_charge">请添加储蓄卡以完成余额充值（信用卡不支持余额充值）</string>
    <string name="ebpay_tobe_active_set_pwd_tips">为了您的账户安全，设置手机支付密码前请绑定本人银行卡以验证身份</string>
    <string name="ebpay_choose_score_balnace_dialog_btn">还需支付%1$s元，去付款</string>
    <string name="ebpay_another_bank_to_pay">还需银行卡支付%1$s元</string>
    <string name="ebpay_order_confirm">百度钱包优惠</string>
    <string name="ebpay_sp_name">商户名称：</string>
    <string name="ebpay_order_no">订单编号：</string>
    <string name="ebpay_yuan">%1$s元</string>
    <string name="ebpay_discount_yuan">-%1$s元</string>
    <string name="ebpay_final_price">还需支付：%1$s元</string>
    <string name="ebpay_save_tip">已优惠%1s元</string>
    <string name="ebpay_to_pay">去付款</string>
    <string name="ebpay_overdue_tip">有效期至 %1$s</string>
    <string name="ebpay_calc_payment_loading">百度钱包正在计算金额，请稍等…</string>
    <string name="ebpay_coupon">优惠券</string>
    <string name="ebpay_input_pc_pass">请输入您在百度钱包网站的支付密码，以便验证。</string>
    <string name="ebpay_pc_pass">请输入网站支付密码</string>
    <string name="ebpay_check_pc_pass">验证网站支付密码</string>
    <string name="ebpay_set_pc_pass_tip">我们发现您设置过百度钱包网站支付密码，您可以使用网站密码进行快速验证。</string>
    <string name="ebpay_set_pc_pass">用网站支付密码快速验证</string>
    <string name="app_name">百度糯米</string>
    <string name="about_check_update">检查更新</string>
    <string name="lianshare_paydone_title">恭喜您获得发礼包机会</string>
    <string name="lianshare_paydone_message1">分享给好友，大家一起抢</string>
    <string name="lianshare_paydone_message2">最高可得</string>
    <string name="lianshare_paydone_message3">%s元</string>
    <string name="lianshare_paydone_message4">抵用券</string>
    <string name="lianshare_paydone_button">发礼包</string>
    <string name="sapi_login_dialog_delete_account_title">删除帐号</string>
    <string name="sapi_social_desc">desc</string>
    <string name="sapi_login_dialog_delete_account_message">确定删除百度帐号%s</string>
    <string name="sapi_login_dialog_delete_account_btn_cancel">取消</string>
    <string name="sapi_login_dialog_delete_account_btn_ok">确定</string>
    <string name="mine_cancel">取消</string>
    <string name="mine_voucher_wechat_friend">转赠给微信好友</string>
    <string name="mine_voucher_wechat_moment">分享至朋友圈</string>
    <string name="mine_voucher_qq_friend">转赠给QQ好友</string>
    <string name="more_only_wifi_display">仅Wi-Fi下显示图片</string>
    <string name="more_share_setting">分享设置</string>
    <string name="more_push_setting">消息提醒设置</string>
    <string name="more_about">关于百度糯米</string>
    <string name="more_invite">邀请好友使用百度糯米</string>
    <string name="more_ratepop">去评价</string>
    <string name="more_feedback">意见反馈</string>
    <string name="more_app">精品应用</string>
    <string name="more_clear_cache">清除缓存 %fM</string>
    <string name="order_btn_insurance">食品安全理赔</string>
    <string name="order_insurance_enable_txt1">验券后48小时内发生食品安全问题，可申请理赔。</string>
    <string name="order_insurance_submit_txt1">理赔申请已提交</string>
    <string name="order_insurance_submit_txt2">我们会在3–5天内联系您核对理赔。</string>
    <string name="order_insurance_submit_txt3">如有疑问，请联系众安客服：</string>
    <string name="order_insurance_submit_txt4">400–999–9595</string>
    <string name="submit_retry_title">您当前未联网</string>
    <string name="submit_retry_message1">到信号好的地方支付，</string>
    <string name="submit_retry_message3">马上省钱哦~</string>
    <string name="submit_retry_ok">知道了</string>
    <string name="quan_self_service_tips_title">验券提示：</string>
    <string name="quan_self_service_tips_content_1">请确认您到店后,</string>
    <string name="quan_self_service_tips_content_2">在服务员面前进行此操作</string>
    <string name="quan_self_service_tips_cancel">取消</string>
    <string name="quan_self_service_tips_ok">我已到店</string>
    <string name="ratepop_title">您对小糯满意么?给个好评鼓励下吧</string>
    <string name="ratepop_cancel">以后再说</string>
    <string name="ratepop_feedback">去提意见</string>
    <string name="ratepop_good"><b>马上好评</b></string>
</resources>