<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/sapi_login_dialog_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/sapi_title_text_color" android:layout_gravity="top" android:id="@id/sapi_login_dialog_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/sapi_login_dialog_delete_account_title" />
    <ImageView android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:src="@android:color/white" android:contentDescription="@string/sapi_social_desc" />
    <TextView android:textSize="15.0sp" android:textColor="@color/sapi_title_text_color" android:layout_gravity="center" android:id="@id/sapi_login_dialog_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/sapi_login_dialog_delete_account_message" />
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip">
        <Button android:textSize="17.0sp" android:textColor="@color/sapi_tip_text_color" android:id="@id/sapi_login_dialog_btn_cancel" android:background="@drawable/sapi_login_dialog_btn_selector" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginLeft="30.0dip" android:layout_marginRight="20.0dip" android:text="@string/sapi_login_dialog_delete_account_btn_cancel" android:layout_weight="1.0" />
        <Button android:textSize="17.0sp" android:textColor="@color/sapi_tip_text_color" android:id="@id/sapi_login_dialog_btn_ok" android:background="@drawable/sapi_login_dialog_btn_selector" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="30.0dip" android:text="@string/sapi_login_dialog_delete_account_btn_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>