<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="13.0sp" android:textColor="@color/mine_black2" android:gravity="center" android:id="@id/wechat_friend" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/mine_voucher_wechat_friend" android:drawableTop="@drawable/bdsocialshare_weixin" android:drawablePadding="10.0dip" android:layout_weight="1.0" />
        <TextView android:textSize="13.0sp" android:textColor="@color/mine_black2" android:gravity="center" android:id="@id/wechat_moment" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/mine_voucher_wechat_moment" android:drawableTop="@drawable/ic_wechat_moment" android:drawablePadding="10.0dip" android:layout_weight="1.0" />
        <TextView android:textSize="13.0sp" android:textColor="@color/mine_black2" android:gravity="center" android:id="@id/qq_friend" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/mine_voucher_qq_friend" android:drawableTop="@drawable/bdsocialshare_qqfriend" android:drawablePadding="10.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <FrameLayout android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/cancel" android:background="@drawable/bdsocialshare_cancel_btn" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:minHeight="48.0dip" android:text="@string/mine_cancel" />
    </FrameLayout>
</LinearLayout>